; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_filebuf.c_test_core_filebuf__5.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_filebuf.c_test_core_filebuf__5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32* }

@GIT_FILEBUF_INIT = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@__const.test_core_filebuf__5.test = private unnamed_addr constant [5 x i8] c"test\00", align 1
@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"libgit2 rocks\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_core_filebuf__5() #0 {
  %1 = alloca %struct.TYPE_6__, align 8
  %2 = alloca [5 x i8], align 1
  %3 = bitcast %struct.TYPE_6__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %3, i8* align 8 bitcast (%struct.TYPE_6__* @GIT_FILEBUF_INIT to i8*), i64 8, i1 false)
  %4 = bitcast [5 x i8]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %4, i8* align 1 getelementptr inbounds ([5 x i8], [5 x i8]* @__const.test_core_filebuf__5.test, i32 0, i32 0), i64 5, i1 false)
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = icmp eq i32* %6, null
  %8 = zext i1 %7 to i32
  %9 = call i32 @cl_assert(i32 %8)
  %10 = getelementptr inbounds [5 x i8], [5 x i8]* %2, i64 0, i64 0
  %11 = call i32 @git_filebuf_open(%struct.TYPE_6__* %1, i8* %10, i32 0, i32 438)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = icmp ne i32* %14, null
  %16 = zext i1 %15 to i32
  %17 = call i32 @cl_assert(i32 %16)
  %18 = call i32 @git_filebuf_printf(%struct.TYPE_6__* %1, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %19 = call i32 @cl_git_pass(i32 %18)
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = icmp ne i32* %21, null
  %23 = zext i1 %22 to i32
  %24 = call i32 @cl_assert(i32 %23)
  %25 = call i32 @git_filebuf_commit(%struct.TYPE_6__* %1)
  %26 = call i32 @cl_git_pass(i32 %25)
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %1, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = icmp eq i32* %28, null
  %30 = zext i1 %29 to i32
  %31 = call i32 @cl_assert(i32 %30)
  %32 = getelementptr inbounds [5 x i8], [5 x i8]* %2, i64 0, i64 0
  %33 = call i32 @p_unlink(i8* %32)
  %34 = call i32 @cl_must_pass(i32 %33)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_assert(i32) #2

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_filebuf_open(%struct.TYPE_6__*, i8*, i32, i32) #2

declare dso_local i32 @git_filebuf_printf(%struct.TYPE_6__*, i8*, i8*) #2

declare dso_local i32 @git_filebuf_commit(%struct.TYPE_6__*) #2

declare dso_local i32 @cl_must_pass(i32) #2

declare dso_local i32 @p_unlink(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
